# schelling-model

./: .gitignore  CMakeLists.txt  README.md  main.cpp
engine/: engine.cpp  engine.h
engine/cell/: cell.cpp  cell.h  home_status.cpp  mood_status.cpp
